# langchain

./: ReadMe.txt  pyproject.toml
docs/: AIAgent.md  AgenticAI.md  model.md  pydantic.md  uv.md
docs/langchain/: 03.message.md  04.prompts.md  05.structuredoutput.md  06.chain.md  07.parallelandconditional.md  08.ReAct.md  langchain.md  roles.md
notebook/: 02.Message.ipynb  03.Prompts.ipynb  04.StructuredOutput.ipynb  05.Chain.ipynb  06.ParallelChain.ipynb  07.ConditionalChain.ipynb  08.Tools.ipynb  09.ReAct.ipynb  Basic.ipynb  Message.ipynb
