[project]
name = "langchain-ai-tool"
version = "0.1.0"
description = "LangChain AI Tool for Python"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ddgs>=9.10.0",
    "langchain>=0.1.0",
    "langchain-community>=0.0.20",
    "langchain-core>=0.1.23",
    "langchain-google-genai>=1.0.1",
    "python-dotenv>=1.2.1",
]
